// Copyright 2023 The Connect Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package connectrpc.conformance.v1alpha1;

import "connectrpc/conformance/v1alpha1/client_compat.proto";
import "connectrpc/conformance/v1alpha1/config.proto";

message TestSuite {
  string name = 1;
  // If non-empty, the protocols to which this suite applies. If empty,
  // this suite applies to all protocols.
  repeated Protocol relevant_protocols = 2;
  // If non-empty, the HTTP versions to which this suite applies. If empty,
  // this suite applies to all HTTP versions.
  repeated HTTPVersion relevant_http_versions = 3;
  repeated TestCase test_cases = 4;
}

message TestCase {
  ClientCompatRequest request = 1;
  ClientResponseResult expected_response = 2;
}
